--- a/app/src/main/res/layout/item_list_note.xml
+++ b/app/src/main/res/layout/item_list_note.xml
@@ -17,13 +17,13 @@
 
             <TextView
                 android:id="@+id/title_item_list_note"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/text_item_list_note"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
