--- a/app/src/main/res/menu/note_detail_menu.xml
+++ b/app/src/main/res/menu/note_detail_menu.xml
@@ -8,4 +8,10 @@
         app:showAsAction="always"
         android:icon="@drawable/pioche"/>
 
+    <item
+        android:id="@+id/delete"
+        android:title="supprimer"
+        app:showAsAction="always"
+        android:icon="@drawable/epee" />
+
 </menu>
