--- a/app/src/main/res/layout/item_list_note.xml
+++ b/app/src/main/res/layout/item_list_note.xml
@@ -18,12 +18,16 @@
             <TextView
                 android:id="@+id/title_item_list_note"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:minLines="1"/>
 
             <TextView
                 android:id="@+id/text_item_list_note"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:minLines="1"/>
 
         </LinearLayout>
 
